--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-personal-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://breten6.github.io/Breten6/",
+  "homepage": "https://breten6.github.io/Breten6",
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
